update in list doc
